--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zodiac",
+  "name": "zodiac-ts",
   "version": "1.0.0",
   "description": "time serie library",
   "main": "index.js",
