--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "gulp test",
-    "bundle": "npx browserify index.js -o zodiac-ts-bundle.js"
+    "bundle": "npx browserify index.js -o zodiac-ts-bundle.js --s zodiac-ts"
   },
   "repository": {
     "type": "git",
